force-app/main/default/objects/Warranty__c/fields/Last_Repair_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Repair_date__c</fullName>
    <label>Last Repair date</label>
    <type>Date</type>
</CustomField>