force-app/main/default/objects/Warranty__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    End_Date__c &lt; TODAY(),
    &quot;Expired&quot;,
    IF(
        End_Date__c &lt;= TODAY() + 30,
        &quot;Expiring Soon&quot;,
        &quot;Active&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Real-time status calculated based on current date.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>