force-app/main/default/objects/Warranty__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <inlineHelpText>Select the coverage tier matching the customer&apos;s purchase.</inlineHelpText>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>